--- a/app/src/main/res/layout/activity_detail_kontrol_layanan_.xml
+++ b/app/src/main/res/layout/activity_detail_kontrol_layanan_.xml
@@ -29,6 +29,35 @@
             android:orientation="vertical"
             android:padding="10dp">
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginBottom="15dp">
+
+                <Button
+                    android:id="@+id/btn_keluhan"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:background="@drawable/btn_rounded_accent"
+                    android:textColor="@android:color/white"
+                    android:text="@string/keluhan_uppercase" />
+
+                <Button
+                    android:id="@+id/btn_history"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:background="@drawable/btn_rounded_accent"
+                    android:textColor="@android:color/white"
+                    android:text="@string/history_uppercase" />
+
+            </LinearLayout>
+
+
             <android.support.design.widget.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
@@ -176,7 +205,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-               <include layout="@layout/item_recyeler_view"/>
+                <include layout="@layout/item_recyeler_view" />
 
             </LinearLayout>
 
