--- a/app/src/main/res/layout/item_jasalain_booking_checkin.xml
+++ b/app/src/main/res/layout/item_jasalain_booking_checkin.xml
@@ -15,7 +15,7 @@
     app:cardElevation="2dp">
 
     <View
-        android:id="@+id/tv_mark_tambah_jasa"
+        android:id="@+id/view_mark_tambah_jasa"
         android:layout_width="70dp"
         android:layout_height="20dp"
         android:layout_gravity="start"
