--- a/app/src/main/res/layout/dialog_sort_by.xml
+++ b/app/src/main/res/layout/dialog_sort_by.xml
@@ -11,9 +11,36 @@
     app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
     android:id="@+id/ly_container_filter">
 
-    <ScrollView
+    <ImageButton
+        android:visibility="gone"
+        android:id="@+id/img_btn_close"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_gravity="end"
+        android:layout_marginEnd="10dp"
+        android:background="@android:color/transparent"
+        android:tint="@color/grey_80"
+        app:srcCompat="@drawable/ic_close"
+        tools:ignore="ContentDescription" />
+
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
+        <View
+            android:layout_width="200dp"
+            android:layout_height="5dp"
+            android:layout_gravity="center"
+            android:background="@drawable/line_white"/>
+
+
+    </FrameLayout>
+
+    <android.support.v4.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:ignore="UselessParent"
+        android:layout_marginStart="-10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -24,23 +51,23 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:padding="10dp">
+                android:orientation="vertical">
 
                 <FrameLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:layout_gravity="center">
 
-                    <Button
-                        android:layout_width="200dp"
+                    <TextView
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/status_uppercase"
+                        android:padding="15dp"
+                        android:layout_marginTop="15dp"
+                        android:textStyle="bold"
                         android:textColor="@android:color/black"
-                        android:background="@android:color/white"
-                        android:layout_marginBottom="5dp"
-                        android:layout_gravity="center"/>
+                        android:background="@drawable/box_shadow"/>
 
 
                 </FrameLayout>
@@ -49,27 +76,72 @@
                     android:id="@+id/rv_status"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    tools:listitem="@layout/item_sort_by"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:paddingTop="10dp"
+                    android:nestedScrollingEnabled="true"
+                    />
+
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_gravity="center">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/antrian_uppercase"
+                        android:padding="15dp"
+                        android:layout_marginTop="15dp"
+                        android:textStyle="bold"
+                        android:textColor="@android:color/black"
+                        android:background="@drawable/box_shadow"/>
+
+                </FrameLayout>
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/rv_antrian"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:paddingTop="10dp"
+                    android:nestedScrollingEnabled="true"
+                    />
+
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_gravity="center">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/pelanggan_uppercase"
+                        android:padding="15dp"
+                        android:layout_marginTop="15dp"
+                        android:textStyle="bold"
+                        android:textColor="@android:color/black"
+                        android:background="@drawable/box_shadow"/>
+
+                </FrameLayout>
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/rv_pelanggan"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:paddingTop="10dp"
+                    android:nestedScrollingEnabled="true"
                     />
 
             </LinearLayout>
 
-            <Button
-                android:visibility="gone"
-                android:id="@+id/btn_tampilkan"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_margin="10dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"
-                android:background="@drawable/btn_rounded_accent"
-                android:text="@string/tampilkan_uppercase"
-                android:textColor="@color/white_transparency" />
-
         </LinearLayout>
 
-    </ScrollView>
+    </android.support.v4.widget.NestedScrollView>
 
 </LinearLayout>
