--- a/app/src/main/res/layout/item_sort_by.xml
+++ b/app/src/main/res/layout/item_sort_by.xml
@@ -1,20 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:orientation="horizontal"
-    android:background="@drawable/corner_border"
-    android:padding="10dp"
     android:gravity="center"
     android:layout_marginTop="10dp"
     android:layout_marginBottom="10dp"
     android:layout_marginStart="5dp"
     android:layout_marginEnd="5dp"
     android:id="@+id/ly_container_status">
-
 
     <TextView
         android:id="@+id/tv_tittle_sort_by"
@@ -25,7 +21,15 @@
         android:gravity="center"
         android:textAlignment="center"
         android:textStyle="bold"
-        android:textColor="@android:color/black" />
+        android:textColor="@android:color/black"
+        android:background="@drawable/corner_border"
+        android:padding="15dp"/>
 
+    <ImageView
+        android:id="@+id/img_check_selected"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:background="@drawable/ic_check_list"
+        android:layout_gravity="top|end" />
 
-</LinearLayout>
+</FrameLayout>
