--- a/app/src/main/res/menu/menu_part.xml
+++ b/app/src/main/res/menu/menu_part.xml
@@ -1,7 +1,7 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
+<menu
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.rkrzmail.oto.MainActivity">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <item
         android:id="@+id/action_search"
