--- a/app/src/main/res/layout/fragment_tab_usaha_bengkel.xml
+++ b/app/src/main/res/layout/fragment_tab_usaha_bengkel.xml
@@ -384,8 +384,7 @@
                     android:ems="10"
                     android:inputType="phone"
                     android:singleLine="true"
-                    android:textSize="14sp"
-                    android:enabled="false"/>
+                    android:textSize="14sp"/>
 
             </android.support.design.widget.TextInputLayout>
 
