--- a/app/src/main/res/layout/dialog_history_detail.xml
+++ b/app/src/main/res/layout/dialog_history_detail.xml
@@ -37,42 +37,58 @@
 
     </android.support.design.widget.TextInputLayout>
 
-    <TextView
+    <LinearLayout
+        android:id="@+id/ly_keluhan"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/keluhan_uppercase"
-        android:padding="15dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="5dp"
-        android:textStyle="bold"
-        android:textColor="@android:color/black"
-        android:background="@drawable/box_shadow"/>
+        android:orientation="vertical">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_keluhan"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/keluhan_uppercase"
+            android:padding="15dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="5dp"
+            android:textStyle="bold"
+            android:textColor="@android:color/black"
+            android:background="@drawable/box_shadow"/>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="PART &amp; JASA"
-        android:padding="15dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="5dp"
-        android:textStyle="bold"
-        android:textColor="@android:color/black"
-        android:background="@drawable/box_shadow"/>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_keluhan"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"/>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_part_jasa"
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/ly_part_jasa"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"/>
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/part_jasa_uppercase"
+            android:padding="15dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="5dp"
+            android:textStyle="bold"
+            android:textColor="@android:color/black"
+            android:background="@drawable/box_shadow"/>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_part_jasa"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"/>
+
+    </LinearLayout>
 
 </LinearLayout>
