--- a/app/src/main/res/layout/fragment_tab_usaha_bengkel.xml
+++ b/app/src/main/res/layout/fragment_tab_usaha_bengkel.xml
@@ -90,7 +90,7 @@
             </FrameLayout>
 
             <Button
-                android:id="@+id/btn_lokasi_regist"
+                android:id="@+id/btn_lokasi_tambahan"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="PETA LOKASI"
