--- a/app/src/main/res/layout/item_tambah_part.xml
+++ b/app/src/main/res/layout/item_tambah_part.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         app:cardCornerRadius="6dp"
-        app:cardElevation="3dp">>
+        app:cardElevation="3dp">
 
         <LinearLayout
             android:layout_width="match_parent"
