--- a/app/src/main/res/layout/activity_atur_parts.xml
+++ b/app/src/main/res/layout/activity_atur_parts.xml
@@ -309,7 +309,7 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="5dp"
                     android:layout_marginRight="10dp"
-                    android:visibility="gone">
+                    android:layout_marginBottom="5dp">
 
                     <EditText
                         android:id="@+id/et_hargaJual_part"
