--- a/app/src/main/res/layout/activity_detail_terima_part_.xml
+++ b/app/src/main/res/layout/activity_detail_terima_part_.xml
@@ -18,10 +18,11 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <ScrollView
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">
+        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior"
+        android:layout_marginBottom="20dp">
 
         <LinearLayout
             android:id="@+id/ly_detailPart"
@@ -182,22 +183,17 @@
 
             </android.support.design.widget.TextInputLayout>
 
-            <ImageView
-                android:layout_height="wrap_content"
-                android:layout_width="match_parent"
-                android:src="@drawable/shape_line_solid"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp" />
-
             <android.support.v7.widget.RecyclerView
-                android:id="@+id/recyclerView_detailTerimaPart"
+                android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="20dp" />
+                android:scrollbars="vertical"
+                android:scrollingCache="true"
+                android:nestedScrollingEnabled="true"
+                android:layout_marginTop="10dp"/>
 
         </LinearLayout>
 
-    </ScrollView>
+    </android.support.v4.widget.NestedScrollView>
 
 </android.support.design.widget.CoordinatorLayout>
