--- a/app/src/main/res/layout/activity_atur_schedule.xml
+++ b/app/src/main/res/layout/activity_atur_schedule.xml
@@ -16,6 +16,7 @@
         android:orientation="vertical">
 
         <android.support.design.widget.AppBarLayout
+            android:id="@+id/appbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:theme="@style/AppTheme.AppBarOverlay">
@@ -371,7 +372,16 @@
 
                 </LinearLayout>
 
-                <include layout="@layout/layout_btn_simpan_hapus" />
+                <Button
+                    android:id="@+id/btn_simpan_schedule_atur"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:layout_weight="1"
+                    android:background="@drawable/btn_rounded_accent"
+                    android:text="@string/simpan_uppercase"
+                    android:textColor="@android:color/white" />
+
 
             </LinearLayout>
 
